44-class-verification/01 大纲回填: 写作期修正 7 条(大纲行号全对,补充机制: union 编码/判定树/Uninitialized 生命周期/invoke 四层/VerifyError 路径/解析触发/failover;实证)